fixed untracked files

--- a/src/IdentityServer/appsettings.json
+++ b/src/IdentityServer/appsettings.json
@@ -3,9 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "System": "Information",
-      "Microsoft": "Information",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Microsoft.AspNetCore.Authentication": "Information"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Warning",
+      "Microsoft.AspNetCore.Authentication": "Warning"
     }
   },
   "AllowedHosts": "*",
