--- a/src/IdentityServer/appsettings.pro.json
+++ b/src/IdentityServer/appsettings.pro.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Data Source=Data\\identityserver4.db;"
+    "Default": "Data Source=data/identityserver4.db;"
   },
   "seed": false
 }
